--- a/src/components/Bio/Bio.css
+++ b/src/components/Bio/Bio.css
@@ -1,6 +1,8 @@
 .bioWrapper {
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    margin-bottom: 20px;
 }
 
 .imageContainer {
