--- a/src/components/Bio/Bio.css
+++ b/src/components/Bio/Bio.css
@@ -11,6 +11,18 @@
     background-color: white;
     border: 3px solid lightgray;
     border-radius: 5px;
-    margin: 0 10px 0 10px;
+    margin: 0 0 0 10px;
     width: 100%;
+}
+
+@media screen and (max-width: 780px) {
+    .bioWrapper {
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .bioTextContainer {
+        margin: 10px 0 10px 0;
+        width: auto;
+    }
 }
